fix(well): missing semicolons in custom vars (#2163)
- Add missing semicolons to two custom properties added to
  custom-large-vars and custom-medium-vars
- Cleans up formatting to remove/add some extra spaces on some other
  declarations with the custom CSS files.

--- a/components/tokens/custom-spectrum/custom-medium-vars.css
+++ b/components/tokens/custom-spectrum/custom-medium-vars.css
@@ -77,5 +77,5 @@ governing permissions and limitations under the License.
   --spectrum-well-padding: var(--spectrum-spacing-300);
   --spectrum-well-margin-top: var(--spectrum-spacing-75);
   --spectrum-well-min-width: 240px;
-  --spectrum-well-border-radius: var(--spectrum-spacing-75)
+  --spectrum-well-border-radius: var(--spectrum-spacing-75);
 }
